<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/blue_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_share"
        app:tint="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo_wisata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/pantai_losari"/>

                <TextView
                    style="@style/TextContent.Small.White"
                    android:padding="8dp"
                    android:text="@string/dummy_photos"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_collections_white_18dp"
                    android:drawablePadding="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="#4D000000"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="bottom" />
            </FrameLayout>

            <TextView
                android:id="@+id/nama_wisata"
                style="@style/TextContent"
                android:textSize="32sp"
                android:text="@string/wisata_name"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/blue_700"/>

            <Button
                android:id="@+id/btn_map"
                style="@style/ButtonGeneral"
                android:text="@string/kunjungi"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/description"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/desc_wisata"
                style="@style/TextContent"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1"
                android:textSize="15sp"
                android:text="@string/lorem"
                android:textColor="@android:color/black" />

            <TextView
                style="@style/TextContent"
                android:layout_marginTop="16dp"
                android:text="@string/pendapat"
                android:textColor="@color/blue_700"
                android:textSize="19sp"
                android:textStyle="bold" />

            <include
                layout="@layout/item_row_rating"/>
            <include
                layout="@layout/item_row_rating"/>
            <include
                layout="@layout/item_row_rating"/>
            <include
                layout="@layout/item_row_rating"/>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>