<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity"
    android:background="@drawable/ic_home_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_200"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/circle_border"
                        android:background="@drawable/profile"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_desc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reach_me_on"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/btn_insta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insta"
                android:layout_marginBottom="16dp"/>
            <Button
                android:id="@+id/btn_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>